# pakiki-frontend-gtk

./: .gitignore  .gitmodules  CONTRIBUTING.md  Proximity.desktop.in  README.md  build-for-debian.sh  com.forensant.pakiki-github.yml  com.forensant.pakiki.yml  com.forensant.proximity-github.yml  com.forensant.proximity.yml  meson.build
.github/workflows/: build.yml
data/: com.forensant.pakiki.desktop  com.forensant.proximity.desktop  meson.build  pakiki.desktop  proximity.desktop
pakiki-core/: proximitycore  proximitypythoninterpreter
scripts/: build.sh  deb-package.sh  init-crashpad.sh
src/: application-window.vala  application.vala  com.forensant.pakiki.gschema.xml  com.forensant.proximity.gschema.xml  main.vala  meson.build
src/forms/: actions.vala  application-preferences.vala  authentication-dialog.vala  find-window.vala  inject-list-row.vala  inject-new.vala  inject-pane.vala  inject-underway.vala  intercept.vala  main-application-pane.vala  payload-selection-widget.vala  placeholder-inject.vala  placeholder-requests.vala  request-compare.vala  request-details.vala  request-list.vala  request-new.vala  request-preview.vala  request-window.vala  requests-pane.vala  saving-dialog.vala  searchable-request-preview.vala  searchable-web-view.vala  sitemap-widget.vala
src/forms/widgets/: hex-editor.vala  inject-point-selection-widget.vala  out-of-band-display.vala  request-diff.vala  request-text-editor.vala  request-text-view.vala  round-progress-bar.vala  searchable-hex-editor.vala  searchable-source-view.vala  text-search-bar.vala
src/forms/widgets/hex-editor/: hex-buffer.vala  hex-remote-buffer.vala  hex-static-buffer.vala
src/models/: core-process.vala  fuzzdb_file.vala  inject-operation.vala  intercepted-request.vala  proxy-settings.vala  request.vala  syntax-highlighter.vala
src/resources/: app-menu.ui  chrome-preferences.json  community.cmb  convert_logo_to_png.sh  find-window.ui  inject-new.ui  inject-pane.ui  inject-point-selection-widget.ui  inject-underway.ui  intercept.glade  intercept.ui  pakikiapp.gresource.xml  payload-selection-widget.ui  placeholder-inject.ui  placeholder-requests.ui  prefs.ui  proximityapp.gresource.xml  request-details.ui  request-list.ui  request-new.cmb  request-new.ui  request-text-view.ui  searchable-source-view.ui  style.css  text-search-bar.ui  version  window.ui
subprojects/crashpad_wrapper/: crashpad.cpp  meson.build
vapi/: crashpad.vapi
